Testing disparity maps, nothing good yet

--- a/stereo_catkin_ws_airlab/src/stereo_assignment/CMakeLists.txt
+++ b/stereo_catkin_ws_airlab/src/stereo_assignment/CMakeLists.txt
@@ -23,15 +23,19 @@ catkin_package(
    CATKIN_DEPENDS roscpp
 #  DEPENDS system_lib
 )
-
+set (LIBELAS_SRC_DIR src/elas)
 include_directories(${Boost_INCLUDE_DIRS}
                     ${catkin_INCLUDE_DIRS}
                     ${OpenCV_INCLUDE_DIRS}
                     ${Eigen_INCLUDE_DIRS}
-                    ${PCL_INCLUDE_DIRS})
-
+                    ${PCL_INCLUDE_DIRS}
+					${LIBELAS_SRC_DIR}
+					)
+SET(CMAKE_CXX_FLAGS "-msse3")				  
+FILE(GLOB LIBELAS_SRC_FILES "src/elas/*.cpp")
+				  
 ## Declare a cpp executable
-add_executable(stereo_assignment_main src/main.cpp)
+add_executable(stereo_assignment_main src/stereo_code.cpp ${LIBELAS_SRC_FILES})
 target_link_libraries( stereo_assignment_main
     ${catkin_LIBRARIES}
     ${PCL_LIBRARIES}
